[package]
name = "mora_20_mint_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-agent = "0.31.0"
candid = "0.10.0"
tokio = { version = "1.23.0", features = ["full"] }
ic-cdk = "0.12.0"
serde = "1.0.152"
